--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
+    "egg-jwt": "^3.1.7",
     "egg-mysql": "^3.0.0",
     "egg-passport": "^2.1.1",
+    "egg-redis": "^2.4.0",
     "egg-scripts": "^2.11.0",
     "egg-validate": "^2.0.2",
     "egg-view-nunjucks": "^2.2.0",
